<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.simpletour</groupId>
    <artifactId>simpletour-ctrip-gateway</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>Simpletour-Ctrip-Gateway-Server</name>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <simpletour.common.version>1.1-SNAPSHOT</simpletour.common.version>
        <spring.version>4.2.2.RELEASE</spring.version>
        <simpletour.product.version>1.0-SNAPSHOT</simpletour.product.version>
        <simpletour.resources.version>1.0-SNAPSHOT</simpletour.resources.version>
        <simpletour.order.version>1.0-SNAPSHOT</simpletour.order.version>
        <simpletour.sms.version>1.0-SNAPSHOT</simpletour.sms.version>
        <simpletour.user.version>1.0-SNAPSHOT</simpletour.user.version>
        <simpletour.transport.version>1.0-SNAPSHOT</simpletour.transport.version>
    </properties>

    <dependencies>
        <!-- 这里作为装配组件的依赖定义，只需要定义各组件service的依赖 -->
        <!-- rest -->
        <dependency>
            <groupId>com.simpletour</groupId>
            <artifactId>simpletour-product-service</artifactId>
            <version>${simpletour.product.version}</version>
        </dependency>
        <dependency>
            <groupId>com.simpletour.common</groupId>
            <artifactId>common-restful</artifactId>
            <version>${simpletour.common.version}</version>
        </dependency>
        <dependency>
            <groupId>com.simpletour.common</groupId>
            <artifactId>common-utils</artifactId>
            <version>${simpletour.common.version}</version>
        </dependency>
        <dependency>
            <groupId>com.simpletour</groupId>
            <artifactId>simpletour-resources-domain</artifactId>
            <version>${simpletour.resources.version}</version>
        </dependency>
        <dependency>
            <groupId>com.simpletour</groupId>
            <artifactId>simpletour-resources-service</artifactId>
            <version>${simpletour.resources.version}</version>
        </dependency>
        <dependency>
            <groupId>com.simpletour</groupId>
            <artifactId>simpletour-order-service</artifactId>
            <version>${simpletour.order.version}</version>
        </dependency>
        <dependency>
            <groupId>com.simpletour</groupId>
            <artifactId>simpletour-sms-service</artifactId>
            <version>${simpletour.sms.version}</version>
        </dependency>
        <dependency>
            <groupId>com.simpletour</groupId>
            <artifactId>simpletour-user-service</artifactId>
            <version>${simpletour.user.version}</version>
        </dependency>
        <dependency>
            <groupId>com.simpletour</groupId>
            <artifactId>simpletour-transport-service</artifactId>
            <version>${simpletour.transport.version}</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.ext</groupId>
            <artifactId>jersey-spring3</artifactId>
            <version>2.22.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-web</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-beans</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-aop</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-context</artifactId>
                </exclusion>
                <exclusion>
                    <artifactId>jersey-bean-validation</artifactId>
                    <groupId>org.glassfish.jersey.ext</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>bean-validator</artifactId>
                    <groupId>org.glassfish.hk2.external</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
            <version>1.0.12</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derby</artifactId>
            <version>10.12.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>1.53</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.4.3</version>
                </plugin>
                <plugin>
                    <groupId>com.sun.tools.xjc.maven2</groupId>
                    <artifactId>maven-jaxb-plugin</artifactId>
                    <version>1.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.mortbay.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>8.1.11.v20130520</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.tomcat.maven</groupId>
                    <artifactId>tomcat7-maven-plugin</artifactId>
                    <version>2.2</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <configuration>
                    <path>/</path>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>  <!--执行器 mvn assembly:assembly-->
                    <execution>
                        <id>go-assembly</id>
                        <!-- 绑定到package生命周期阶段上 -->
                        <phase>package</phase>
                        <goals>
                            <!-- 只运行一次 -->
                            <goal>single</goal>
                        </goals>
                        <!-- 父pom.xml绑定阶段为package ,所以这儿要知道指定一般Assembly描述文件 包括：包含打包的格式，包含的文件和过滤的文件等。可以同时指定多个描述文件例如不同的生产环境 -->
                        <configuration>
                            <descriptors>
                                <descriptor>src/main/resources/assemblies/assembly-prod.xml</descriptor>
                                <descriptor>src/main/resources/assemblies/assembly-test.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>nexus</id>
            <name>nexus</name>
            <url>http://192.168.2.231/nexus/content/groups/public/</url>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>Internal Releases</name>
            <url>http://192.168.2.231/nexus/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>Internal Snapshots</name>
            <url>http://192.168.2.231/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
</project>